[package]
name = "tonic-native-tls"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/BratSinot/tonic-native-tls"
homepage = "https://github.com/BratSinot/tonic-native-tls"
description = "native-tls for tonic"
categories = ["web-programming"]
keywords = ["http", "grpc", "service"]

[dependencies]
