[package]
name = "tonic-native-tls"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/BratSinot/tonic-native-tls"
homepage = "https://github.com/BratSinot/tonic-native-tls"
description = "native-tls for tonic"
categories = ["web-programming"]
keywords = ["http", "grpc", "service"]

[workspace]
members = [
    "example"
]

[features]
vendored = ["native-tls/vendored"]

[dependencies]
futures-util = "0.3.24"
tokio-native-tls = "0.3.0"
tokio = { version = "1", features = ["rt-multi-thread"] }

axum = { version = "0.5.16", optional = true, default-features = false }
native-tls = { version = "0.2.10", optional = true }
tracing = { version = "0.1.37", optional = true, default-features = false }
tonic = { version = "0.8.2", optional = true, default-features = false, features = ["transport"] }
