[package]
name = "example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
prost = "0.11.0"
tokio-stream = { version = "0.1.11", features = ["net"] }
tokio = { version = "1" }
tonic-native-tls = { path = "../", features = ["tonic"] }
tonic-reflection = "0.5.0"
tonic = { version = "0.8.0", default-features = false, features = ["codegen", "prost"] }
hyper-tls = "0.5.0"
hyper = "0.14.20"

[build-dependencies]
tonic-build = { version = "0.8.0", default-features = false, features = ["prost"] }
